fixed pulse and letter spacing

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,14 @@
 html {
     color: rgb(255, 255, 255);
     font-family: sans-serif;
+    letter-spacing: 1px;
 }
 
 @-webkit-keyframes pulseColor {  
     0% { background-color: rgb(24, 8, 116); }
-    50% { background-color: rgb(13, 58, 135); }
+    50% { background-color: rgb(15, 63, 146); }
     51% { background-color: rgb(67, 8, 116); }
-    100% { background-color: rgb(14, 125, 177); }
+    100% { background-color: rgb(24, 8, 116); }
   }
   
 body {
